# genroutes

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: python-package.yml
docs/: .buildinfo  conf.py  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/refs/: _genroutes.doctree  genroutes.doctree
docs/_build/doctrees/source/: genroutes.doctree  modules.doctree  src.doctree  src.genroutes.doctree
docs/_build/html/: search.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/refs/: genroutes.rst.txt
docs/_build/html/_sources/source/: genroutes.rst.txt  src.genroutes.rst.txt
docs/_build/html/source/: genroutes.html  modules.html  src.genroutes.html  src.html
docs/_sources/refs/: _genroutes.rst.txt
docs/_sources/source/: src.rst.txt
docs/refs/: _genroutes.html  genroutes.html
docs/source/: modules.rst
src/genroutes/: __init__.py  crud.py  generic_routes.py
src/genroutes/cli/: generate.py  main.py  metafactory.py
tests/: test_routes.py
