[build-system]
    requires = ["flit_core >=3.2,<4"]
    build-backend = "flit_core.buildapi"

[project]
    name = "genroutes"
    authors = [
        {name = "Tokoni Kemenanabo", email = "tokonix@gmail.com"}
    ]
    license = {file = "LICENSE"}
    classifiers = [
        "License :: OSI Approved :: Apache Software License",
        "Private :: Do Not Upload"
    ]
    dynamic = ["version", "description"]
    requires-python = ">=3.7"
    dependencies = [
        "SQLAlchemy~=2.0.7",
        "pydantic~=1.10.6",
        "fastapi~=0.95.0"
    ]

[project.optional-dependencies]
    test = [
        "pytest >=7.0.0",
        "pytest-cov",
        "mock-alchemy>=0.2.5"
    ]
    doc = ["sphinx", "sphinx-rtd-theme"]

[project.urls]
    Home = "https://github.com/TokoniK/genroutes"
