[build-system]
    requires = ["flit_core >=3.2,<4"]
    build-backend = "flit_core.buildapi"

[project]
    name = "genroutes"
    authors = [
        {name = "Tokoni Kemenanabo", email = "tokonix@gmail.com"}
    ]
    license = {file = "LICENSE"}
    classifiers = [
        "License :: OSI Approved :: Apache Software License",
        "Private :: Do Not Upload",
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: Code Generators",
        "Development Status :: 4 - Beta",
        "Framework :: FastAPI",
        "Natural Language :: English",
        "Operating System :: OS Independent"
    ]
    dynamic = ["version", "description"]
    requires-python = ">=3.7"
    dependencies = [
        "SQLAlchemy~=2.0.31",

#        "SQLAlchemy~=2.0.7",
#        "pydantic~=1.10.6",
#        "fastapi~=0.95.0",
        "pydantic~=2.8.2",
        "fastapi~=0.111.1",
        "pydantic-settings~=2.3.4",
        "pydantic-core~=2.20.1",


        "inflect~=7.3.1",
        "psycopg2~=2.9.9"
    ]

[project.optional-dependencies]
    test = [
        "pytest >=7.0.0",
        "pytest-cov",
        "mock-alchemy>=0.2.5",
        "httpx >=0.23.3"
    ]
    doc = ["sphinx", "sphinx-rtd-theme"]

[project.urls]
    Home = "https://github.com/TokoniK/genroutes"
[project.scripts]
#    genroutes = "genroutes.generic_routes:generate"
    genroutes = "genroutes.cli.main:main"

